--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [
     debug_info,
-    warnings_as_errors,
+%    warnings_as_errors,
     warn_export_vars,
     warn_unused_import,
     warn_missing_spec_all
@@ -43,6 +43,7 @@
 
 {escript_emu_args, "%%! -connect_all false\n"}.
 {escript_incl_extra, [{"els_lsp/priv/snippets/*", "_build/default/lib/"}]}.
+%{escript_shebang, "#!/usr/bin/env /opt/homebrew/bin/escript\n"}. % executable line
 {escript_main_app, els_lsp}.
 {escript_name, erlang_ls}.
 
